--- a/style.css
+++ b/style.css
@@ -27,3 +27,11 @@ body {
   color: #ffffff;
   display: inline-block;
 }
+
+@media (max-width: 650px) {
+  .nav li {
+    display: block;
+    width: 100%;
+    border-bottom: solid 1px white;
+  }
+}
